# The actual runnable program is set to the SCRIPTS primitive.
# # Prefix bin_ tells where to copy this
bin_SCRIPTS = src/png2pdf.py
# # List of files to be distributed
EXTRA_DIST = $(bin_SCRIPTS)
#
#     # The desktop files
desktopdir = $(datadir)/applications
desktop_DATA = misc/png2pdf.desktop

appicondir = $(datadir)/icons/hicolor/scalable/apps
appicon_DATA = misc/png2pdf.svg
